<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/grey_main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/view_colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/colors_used_for_triggers"
            android:textColor="@color/milk_slide_menu_text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TopStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ok_color"
            android:text="@string/ok"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/BottomStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ok_color"
            android:text="@string/ok_state"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/TopStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/not_classified_color"
            android:text="@string/not_classified"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/BottomStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/not_classified_color"
            android:text="@string/not_classified_state"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/TopStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/information_color"
            android:text="@string/information"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/BottomStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/information_color"
            android:text="@string/information_state"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/TopStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/warning_color"
            android:text="@string/warning"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/BottomStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/warning_color"
            android:text="@string/warning_state"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/TopStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/average_color"
            android:text="@string/average"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/BottomStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/average_color"
            android:text="@string/average_state"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/TopStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/high_color"
            android:text="@string/high"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/BottomStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/high_color"
            android:text="@string/high_state"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/TopStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/disaster_color"
            android:text="@string/disaster"
            android:textColor="@color/milk_slide_menu_text" />

        <TextView
            style="@style/BottomStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/disaster_color"
            android:text="@string/disaster_state"
            android:textColor="@color/milk_slide_menu_text" />
    </LinearLayout>

</ScrollView>